--- a/app/static/css/resume.css
+++ b/app/static/css/resume.css
@@ -1,3 +1,12 @@
 body {
-    background-color: lightblue;
+    background-color : rgb(240, 240, 240) ;
+}
+.top {
+    text-align : center ;
+    padding : 20px ;
+    background-color : rgb(180, 180, 180) ;
+}
+.LB {
+    border-bottom : 10px solid black ;
+    direction : rtl ;
 }
