--- a/app/static/css/resume.css
+++ b/app/static/css/resume.css
@@ -1,12 +1,19 @@
 body {
     background-color : rgb(240, 240, 240) ;
+    font-family: Arial;
 }
 .top {
     text-align : center ;
-    padding : 20px ;
-    background-color : rgb(180, 180, 180) ;
+    padding : 5px ;
+    background-color : rgb(32, 30, 30) ;
+    color : rgb(154, 144, 144) ;
 }
 .LB {
-    border-bottom : 10px solid black ;
-    direction : rtl ;
+    border-bottom : 5px solid black ;
+}
+.lineH {
+    line-height: 2px;
+}
+p {
+    text-align: center;
 }
