--- a/app/static/css/hw03.css
+++ b/app/static/css/hw03.css
@@ -1,9 +1,10 @@
-th.chSize {
-   
-}
 
 td {
    text-align: center;
+   background-color: #f9f9f9;
+   width: 14%;
+   height: 20%;
+   border-radius: 15%;
 }
 td.good {
    background-color: #00e400;
