--- a/app/static/css/hw04.css
+++ b/app/static/css/hw04.css
@@ -1,13 +1,76 @@
 body {
    height: 100%;
    overflow-x: hidden;
-   background-color: rgb(226, 235, 235);
+   background-color: rgb(208, 239, 249);   
 }
-p,h1,h2,h3,h5,h4,span{
+p,h1,h2,h3,h5,h4,h6{
    text-align: center;
    color:black;
    border-radius: 12px;
 }
+@keyframes dontclickmee{
+   0% {
+      background-image: url('../ico/st1.png');
+   }
+   25% {
+      background-image: url('../ico/st2.png');
+   }
+   50% {
+      background-image: url('../ico/st3.png');
+   }
+   75% {
+      background-image: url('../ico/st2.png');
+   }
+   100% {
+      background-image: url('../ico/st1.png');
+   }
+}
+@keyframes iamWalking {
+   0% {
+     transform: translateX(20%);
+   }
+   99% {
+     transform: translateX(80%);
+   }
+   100% {
+      transform: translateX(80%);
+    }
+}
+@keyframes iamRotate {
+   100% {
+     transform: rotateY(180deg);
+   }
+}
+a{
+   width: 80%;
+   height: 100px;
+   animation: iamWalking 5s ease-in-out infinite,iamRotate 1s ease-in-out infinite;
+   position: absolute;
+   animation-direction: alternate;
+   animation-fill-mode: forwards;
+}
+.noooo {
+   background-size: 75%;
+   background-position: center top;
+   display:inline-block;
+   width:100px; 
+   height:120px;
+   animation:dontclickmee 0.15s ease-in-out infinite;
+   background-size:cover;
+   background-repeat:no-repeat;
+}
+.noooo:hover::after { 
+   content: "  !Dont click me!  ";
+   color:white;
+   left: 84px;
+   position: fixed;
+   font-size: 20px;
+   padding-left: 15px;
+   padding-right: 15px;
+   background-color: #3d3c3b;
+   border-radius: 100px 5px 100px 5px;
+}
+
 .all{
    padding: 2px 0;
    margin-top: 5px;
@@ -17,7 +80,7 @@ p,h1,h2,h3,h5,h4,span{
 }
 .card {
    border-radius: 10px;
-   margin:2% 3.2% 1% 3.2%;
+   margin:6% 1% 2% 1%;
    position: relative;
 }
 @property --angle{
@@ -29,8 +92,8 @@ p,h1,h2,h3,h5,h4,span{
    content:'';
    position: absolute;
    height:102%;
-   width:102%;
-   background-image: conic-gradient(from var(--angle),transparent 80%,rgb(3, 3, 94),blue,purple,rgb(250, 23, 23),rgb(255, 255, 255));
+   width:102%;                                     
+   background-image: conic-gradient(from var(--angle),transparent 80%,rgb(255, 229, 63),rgb(255, 132, 0),rgb(250, 23, 23),purple,blue,rgb(3, 3, 94));
    top:50%;
    left:50%;
    translate:-50% -50%;
@@ -41,7 +104,7 @@ p,h1,h2,h3,h5,h4,span{
 }
 .card::before{
    filter:blur(1.5rem);
-   opacity:0.8;
+   opacity:10;
 }
 @keyframes spin{
    from{
@@ -51,34 +114,87 @@ p,h1,h2,h3,h5,h4,span{
       --angle:360deg;
    }
 }
+@keyframes imgAnimationA{
+   0%{
+      background-image: url('../ico/good1.png');
+   }
+   20%{
+      background-image: url('../ico/good2.png');
+   }
+   40% {
+      background-image: url('../ico/good3.png');
+   }
+   60% {
+      background-image: url('../ico/good4.png');
+   }
+   80% {
+      background-image: url('../ico/good5.png');
+   }
+   100% {
+      background-image: url('../ico/good6.png');
+   }
+}
 .icon-good {
-   background-image: url('../ico/good.png');
+   animation: imgAnimationA 3s ease-in-out 1 forwards;
    background-size: 75%; /* Adjust as needed */
    background-repeat: no-repeat;
    display: inline-block; /* or block depending on your layout */
-   width: 40%; /* Width is 60% of its containing .col element */
+   width: 80%; /* Width is 60% of its containing .col element */
    height: 0; /* Initial height is set to 0 */
    padding-bottom: 60%; /* Padding-bottom based on the width of the element gives it height */
    background-position: center top;
    margin: auto; /* This will help center the block if it's smaller than the column */
 }
+
 .icon-moderate {
    background-image: url('../ico/moderate.png');
    background-size: 75%; /* Adjust as needed */
    background-repeat: no-repeat;
    display: inline-block; /* or block depending on your layout */
-   width: 40%; /* Width is 60% of its containing .col element */
+   width: 80%; /* Width is 60% of its containing .col element */
    height: 0; /* Initial height is set to 0 */
    padding-bottom: 60%; /* Padding-bottom based on the width of the element gives it height */
    background-position: center top;
    margin: auto; /* This will help center the block if it's smaller than the column */
 }
+@keyframes imgAnimationB{
+   0%{
+      background-image: url('../ico/unhealthy-sensitive1.png');
+   }
+   10%{
+      background-image: url('../ico/unhealthy-sensitive2.png');
+   }
+   20%{
+      background-image: url('../ico/unhealthy-sensitive3.png');
+   }
+   30% {
+      background-image: url('../ico/unhealthy-sensitive4.png');
+   }
+   40%{
+      background-image: url('../ico/unhealthy-sensitive5.png');
+   }
+   50%{
+      background-image: url('../ico/unhealthy-sensitive6.png');
+   }
+   60% {
+      background-image: url('../ico/unhealthy-sensitive7.png');
+   }
+   70%{
+      background-image: url('../ico/unhealthy-sensitive8.png');
+   }
+   80% {
+      background-image: url('../ico/unhealthy-sensitive9.png');
+   }
+   100% {
+      background-image: url('../ico/unhealthy-sensitive10.png');
+   }
+}
 .icon-unhealthy-sensitive {
-   background-image: url('../ico/unhealthy-sensitive.png');
-  background-size: 75%; /* Adjust as needed */
+   animation: imgAnimationB 4s ease-in-out 1 forwards;
+   background-size: 75%; /* Adjust as needed */
    background-repeat: no-repeat;
    display: inline-block; /* or block depending on your layout */
-   width: 40%; /* Width is 60% of its containing .col element */
+   width: 80%; /* Width is 60% of its containing .col element */
    height: 0; /* Initial height is set to 0 */
    padding-bottom: 60%; /* Padding-bottom based on the width of the element gives it height */
    background-position: center top;
@@ -89,7 +205,7 @@ p,h1,h2,h3,h5,h4,span{
   background-size: 75%; /* Adjust as needed */
    background-repeat: no-repeat;
    display: inline-block; /* or block depending on your layout */
-   width: 40%; /* Width is 60% of its containing .col element */
+   width: 80%; /* Width is 60% of its containing .col element */
    height: 0; /* Initial height is set to 0 */
    padding-bottom: 60%; /* Padding-bottom based on the width of the element gives it height */
    background-position: center top;
@@ -100,7 +216,7 @@ p,h1,h2,h3,h5,h4,span{
    background-size: 75%; /* Adjust as needed */
    background-repeat: no-repeat;
    display: inline-block; /* or block depending on your layout */
-   width: 40%; /* Width is 60% of its containing .col element */
+   width: 80%; /* Width is 60% of its containing .col element */
    height: 0; /* Initial height is set to 0 */
    padding-bottom: 60%; /* Padding-bottom based on the width of the element gives it height */
    background-position: center top;
@@ -111,7 +227,7 @@ p,h1,h2,h3,h5,h4,span{
   background-size: 75%; /* Adjust as needed */
    background-repeat: no-repeat;
    display: inline-block; /* or block depending on your layout */
-   width: 40%; /* Width is 60% of its containing .col element */
+   width: 80%; /* Width is 60% of its containing .col element */
    height: 0; /* Initial height is set to 0 */
    padding-bottom: 60%; /* Padding-bottom based on the width of the element gives it height */
    background-position: center top;
