ไม่อยากลองดีกับ docker แล้ว

--- a/app/static/css/hw04.css
+++ b/app/static/css/hw04.css
@@ -67,7 +67,7 @@ a{
    font-size: 20px;
    padding-left: 15px;
    padding-right: 15px;
-   background-color: #3d3c3b;
+   background-color: #00ff04;
    border-radius: 100px 5px 100px 5px;
 }
 
