--- a/app/static/css/hw04.css
+++ b/app/static/css/hw04.css
@@ -27,48 +27,38 @@ p,h1,h2,h3,h5,h4,h6{
 }
 @keyframes iamWalking {
    0% {
-     transform: translateX(20%);
-   }
-   99% {
-     transform: translateX(80%);
-   }
+      transform: translateX(20%) rotateY(0deg);
+  }
    100% {
-      transform: translateX(80%);
-    }
-}
-@keyframes iamRotate {
-   100% {
-     transform: rotateY(180deg);
+         transform: translateX(40%) rotateY(180deg);
    }
 }
 a{
    width: 80%;
+   max-width: 300px;
    height: 100px;
-   animation: iamWalking 5s ease-in-out infinite,iamRotate 1s ease-in-out infinite;
-   position: absolute;
+   animation: iamWalking 2s ease-in-out infinite;
+   position: relative;
    animation-direction: alternate;
-   animation-fill-mode: forwards;
 }
 .noooo {
-   background-size: 75%;
-   background-position: center top;
-   display:inline-block;
+   background-size: cover;
    width:100px; 
    height:120px;
    animation:dontclickmee 0.15s ease-in-out infinite;
-   background-size:cover;
    background-repeat:no-repeat;
+   position: relative;
 }
 .noooo:hover::after { 
    content: "  !Dont click me!  ";
    color:white;
    left: 84px;
-   position: fixed;
+   position: absolute;
    font-size: 20px;
    padding-left: 15px;
    padding-right: 15px;
    background-color: #1d0471;
-   border-radius: 100px 5px 100px 5px;
+   border-radius: 50px 5px 50px 5px;
 }
 
 .all{
