--- a/app/static/css/hw04.css
+++ b/app/static/css/hw04.css
@@ -6,7 +6,6 @@ body {
 p,h1,h2,h3,h5,h4,h6{
    text-align: center;
    border-radius: 12px;
-   text-transform: capitalize;
    font-weight: bold;
 }
 @keyframes dontclickmee{
@@ -62,6 +61,8 @@ a{
 }
 
 .all{
+   width: 100%;
+   height: 100%;
    padding: 2px 0;
    margin-top: 5px;
    margin-bottom: 10px;
@@ -71,7 +72,7 @@ a{
 .card {
    border-radius: 10px;
    margin:6% 2px 6% 2px;
-   position: relative;
+   display: relative;
 }
 @property --angle{
    syntax: "<angle>";
