--- a/app/templates/lab03/base.html
+++ b/app/templates/lab03/base.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
 <head>
   <meta charset="UTF-8">
   <title>{% block title %} {% endblock %} - FlaskApp</title>
@@ -12,18 +11,28 @@
       margin-left: 50px;
       text-decoration: none;
     }
+
+    .alert {
+      padding: 20px;
+      margin: 5px;
+      color: #970020;
+      background-color: #ffd5de;
+    }
   </style>
 </head>
-
 
 <body>
   <nav>
     <a href="{{ url_for('lab03_home') }}">FlaskApp</a>
     <a href="{{ url_for('lab03_comments') }}">Comments</a>
+    <a href="{{ url_for('lab03_create') }}">Create</a>
     <a href="{{ url_for('lab03_about') }}">About</a>
   </nav>
   <hr>
   <div class="content">
+    {% for message in get_flashed_messages() %}
+      <div class="alert">{{ message }}</div>
+    {% endfor %}
     {% block content %} {% endblock %}
   </div>
 </body>
