--- a/app/templates/lab06/base.html
+++ b/app/templates/lab06/base.html
@@ -13,6 +13,7 @@
       text-decoration: none;
     }
   </style>
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/hw06.css')}}">
 </head>
 
 
@@ -20,11 +21,17 @@
   <nav>
     <a href="{{ url_for('lab06_index') }}">FlaskApp</a>
     <a href="{{ url_for('lab06_courses') }}">Courses</a>
+    <a href="{{ url_for('hw06_register') }}">Register</a>
+    <a href="{{ url_for('hw06_users') }}">User List</a>
     <a href="#">About</a>
   </nav>
   <hr>
   <div class="content">
-    {% block content %} {% endblock %}
+    {% for message in get_flashed_messages() %}
+      <div class="alert">{{ message }}</div>
+    {% endfor %}
+    {% block content %} 
+    {% endblock %}
   </div>
 </body>
 
