--- a/app/templates/lab06/base.html
+++ b/app/templates/lab06/base.html
@@ -13,7 +13,7 @@
       text-decoration: none;
     }
   </style>
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/hw06.css')}}">
+  <link rel="stylesheet" href="/static/css/hw06.css">
 </head>
 
 
