--- a/flask/app/static/css/stockmenu.css
+++ b/flask/app/static/css/stockmenu.css
@@ -1,15 +1,102 @@
 .mobilescreen {
-  width: 430px;
-  height: 883px;
-  background: #000000;
-  border: 1px solid #AAAAAA;
+  margin: 5% 5% 0% 0%;
+  background: linear-gradient(180deg, #FFFFFFEB 2%, #FEFAC0 79%);
+  
+background-repeat: no-repeat;
+            background-position: center center;
+            background-attachment: fixed;
+            background-size: cover;
+}
+.reply-icon {
+	width: 52px;
+	height: 52px;
+	fill: #000000;
 }
 .mainbox {
   width: 368px;
   height: 520px;
   padding: 8px;
+  text-align: center;
   box-shadow: 0px 24px 30px #00000040;
   background: radial-gradient(circle at 0% 0%, #FFFFFF 0%, #DAA865 100%);
   border: 1px solid transparent;
   border-radius: 20px;
+}
+.row {
+    display: flex;
+    align-items: center;
+    border:solid;
+    margin:0px;
+}
+.column {
+    border:solid;
+    margin-top: 20px;
+    justify-items: center;
+    height: 70%;
+}
+.recName {
+    width: 4px;
+    height: 25px;
+    padding: 5px;
+    margin-right: 10px;
+    background: #000000;
+    border: 1px solid #000000;
+}
+.nav-box{
+width: 80%;
+text-align: center;
+  margin-bottom:10%;
+  background: #FFFFFF;
+  border: solid;
+  border-radius: 20px;
+  color: #000000;
+  font-weight: bold;
+  font-size: 30px;
+
+}
+.category-icon {
+	width: 52px;
+	height: 52px;
+	fill: #000000;
+}
+a { 
+    text-decoration: none ;
+}
+
+.card {
+   border-radius: 10px;
+   margin:6% 2px 6% 2px;
+   display: relative;
+}
+@property --angle{
+   syntax: "<angle>";
+   initial-value: 0deg;
+   inherits:false;
+}
+.card::after, .card::before{
+   content:'';
+   position: absolute;
+   height:102%;
+   width:102%;
+   background-image: conic-gradient(from var(--angle),transparent 80%,rgb(255, 229, 63),rgb(255, 132, 0),rgb(250, 23, 23),purple,blue,rgb(3, 3, 94));
+   top:50%;
+   left:50%;
+   translate:-50% -50%;
+   z-index:-1;
+   padding: 3px ;
+   border-radius: 10px;
+   animation: 5s spin linear infinite;
+}
+.card::before{
+   filter:blur(1.5rem);
+   opacity:10;
+}
+
+@keyframes spin{
+   from{
+      --angle:0deg;
+   }
+   to{
+      --angle:360deg;
+   }
 }
