--- a/flask/app/templates/stockmenu.html
+++ b/flask/app/templates/stockmenu.html
@@ -7,7 +7,6 @@
 </head>
 
 <body class="mobilescreen">
-    
     <a href="{{ url_for('homepage') }}"> <img src="../static/ico/reply.png" class="reply-icon"></a>
     <div class="mainbox">
         <div class="row">
@@ -15,15 +14,15 @@
             <h1>Stock Menu</h1>
         </div>
         <div class="column card">
-            <button type="button" class="nav-box" onclick="navigateTo('{{ url_for('catagory') }}')">
-                <span>Catagory</span>
+           	<button type="button" class="nav-box" onclick="navigateTo('{{ url_for('catagory') }}')">
+                <span>Category</span>
                 <img src="../static/ico/catagory.png" class="category-icon">
-            </button>
-           <button type="button" class="nav-box" onclick="navigateTo('{{ url_for('newstock') }}')">
+           	</button>
+           	<button type="button" class="nav-box" onclick="navigateTo('{{ url_for('newstock') }}')">
                 <span>New Stock</span>
-                <img src="../static/ico/addStock.png" class="addStock-icon">
-            </button>
-        </div>
+            	<img src="../static/ico/addStock.png" class="addStock-icon">
+        	</button>
+		</div>
     </div>
 </body>
 </html>
